--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,9 @@ __pycache__/
 # C extensions
 *.so
 
+#CSV
+*.csv
+
 # Distribution / packaging
 .Python
 build/
@@ -140,6 +143,7 @@ celerybeat.pid
 .venv
 env/
 venv/
+sleep_dashboard_venv/
 ENV/
 env.bak/
 venv.bak/
